Panel Updates, move packages and other things